@@ -18,9 +18,12 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.io.Resources;
 import io.airlift.units.DataSize;
 import io.trino.memory.context.AggregatedMemoryContext;
+import io.trino.parquet.DiskRange;
 import io.trino.parquet.ParquetDataSource;
 import io.trino.parquet.ParquetReaderOptions;
+import io.trino.parquet.metadata.BlockMetadata;
 import io.trino.parquet.metadata.ParquetMetadata;
+import io.trino.parquet.metadata.PrunedBlockMetadata;
 import io.trino.parquet.writer.ParquetWriterOptions;
 import io.trino.spi.Page;
 import io.trino.spi.TrinoException;
@@ -36,6 +39,8 @@ import io.trino.spi.predicate.ValueSet;
 import io.trino.spi.type.ArrayType;
 import io.trino.spi.type.Type;
 import io.trino.testing.TestingConnectorSession;
+import org.apache.parquet.column.ColumnDescriptor;
+import org.apache.parquet.schema.Types;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
@@ -52,11 +57,13 @@ import static io.trino.memory.context.AggregatedMemoryContext.newSimpleAggregate
 import static io.trino.parquet.ParquetTestUtils.createParquetReader;
 import static io.trino.parquet.ParquetTestUtils.generateInputPages;
 import static io.trino.parquet.ParquetTestUtils.writeParquetFile;
+import static io.trino.parquet.reader.MetadataReader.POST_SCRIPT_SIZE;
 import static io.trino.parquet.reader.ParquetReader.COLUMN_INDEX_ROWS_FILTERED;
 import static io.trino.spi.type.BigintType.BIGINT;
 import static io.trino.spi.type.DateType.DATE;
 import static io.trino.spi.type.IntegerType.INTEGER;
 import static io.trino.spi.type.VarcharType.VARCHAR;
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.INT64;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -79,13 +86,13 @@ public class TestParquetReader
                         columnNames,
                         generateInputPages(types, 100, 5)),
                 new ParquetReaderOptions());
-        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty());
-        assertThat(parquetMetadata.getBlocks().size()).isGreaterThan(1);
+        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.empty());
+        assertThat(parquetMetadata.getRowGroupInfo().size()).isGreaterThan(1);
         // Verify file has only non-dictionary encodings as dictionary memory usage is already tested in TestFlatColumnReader#testMemoryUsage
-        parquetMetadata.getBlocks().forEach(block -> {
-            block.columns()
+        parquetMetadata.getRowGroupInfo().forEach(rowGroupInfo -> {
+            rowGroupInfo.prunedBlockMetadata().getBlockMetadata().columns()
                     .forEach(columnChunkMetaData -> assertThat(columnChunkMetaData.getEncodingStats().hasDictionaryEncodedPages()).isFalse());
-            assertThat(block.rowCount()).isEqualTo(100);
+            assertThat(rowGroupInfo.prunedBlockMetadata().getBlockMetadata().rowCount()).isEqualTo(100);
         });
 
         AggregatedMemoryContext memoryContext = newSimpleAggregatedMemoryContext();
@@ -105,7 +112,7 @@ public class TestParquetReader
         assertThat(currentMemoryUsage).isGreaterThan(initialMemoryUsage);
 
         // Memory usage does not change until next row group (1 page per row-group)
-        long rowGroupRowCount = parquetMetadata.getBlocks().get(0).rowCount();
+        long rowGroupRowCount = parquetMetadata.getRowGroupInfo().getFirst().prunedBlockMetadata().getBlockMetadata().rowCount();
         int rowsRead = page.getPositionCount();
         while (rowsRead < rowGroupRowCount) {
             rowsRead += reader.nextPage().getPositionCount();
@@ -132,8 +139,8 @@ public class TestParquetReader
         ParquetDataSource dataSource = new FileParquetDataSource(
                 new File(Resources.getResource("lineitem_sorted_by_shipdate/data.parquet").toURI()),
                 new ParquetReaderOptions());
-        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty());
-        assertThat(parquetMetadata.getBlocks()).hasSize(2);
+        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.empty());
+        assertThat(parquetMetadata.getRowGroupInfo()).hasSize(2);
         // The predicate and the file are prepared so that page indexes will result in non-overlapping row ranges and eliminate the entire first row group
         // while the second row group still has to be read
         TupleDomain<String> predicate = TupleDomain.withColumnDomains(
@@ -153,7 +160,7 @@ public class TestParquetReader
             assertThat(metrics).containsKey(COLUMN_INDEX_ROWS_FILTERED);
             // Column index should filter at least the first row group
             assertThat(((Count<?>) metrics.get(COLUMN_INDEX_ROWS_FILTERED)).getTotal())
-                    .isGreaterThanOrEqualTo(parquetMetadata.getBlocks().get(0).rowCount());
+                    .isGreaterThanOrEqualTo(parquetMetadata.getRowGroupInfo().getFirst().prunedBlockMetadata().getBlockMetadata().rowCount());
         }
     }
 
@@ -186,6 +193,52 @@ public class TestParquetReader
                 .isInstanceOf(TrinoException.class);
     }
 
+    @Test
+    public void testOffsetColumnFilter()
+            throws IOException
+    {
+        // Write a file with 100 rows per row-group
+        List<String> columnNames = ImmutableList.of("columna", "columnb");
+        List<Type> types = ImmutableList.of(INTEGER, BIGINT);
+
+        ParquetDataSource dataSource = new TestingParquetDataSource(
+                writeParquetFile(
+                        ParquetWriterOptions.builder()
+                                .setMaxBlockSize(DataSize.ofBytes(1000))
+                                .build(),
+                        types,
+                        columnNames,
+                        generateInputPages(types, 100, 5)),
+                new ParquetReaderOptions());
+
+        long estimatedSize = dataSource.getEstimatedSize();
+        long estimatedDataSize = estimatedSize - POST_SCRIPT_SIZE - dataSource.readFully(0, (int) estimatedSize).getInt((int) estimatedSize - POST_SCRIPT_SIZE);
+
+        // Read single column, 1 row group
+        ColumnDescriptor columnDescriptor = new ColumnDescriptor(new String[] {"columnb"}, Types.optional(INT64).named(""), 0, 0);
+        ParquetMetadata parquetMetadata1 = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.of(new DiskRange(100, 101)));
+        List<RowGroupInfo> rowGroupInfo1 = parquetMetadata1.getRowGroupInfo(Optional.of(dataSource), Optional.of(ImmutableMap.of(ImmutableList.of("columnb"), columnDescriptor)));
+
+        assertThat(rowGroupInfo1.stream().allMatch(rg -> rg.prunedBlockMetadata().getColumns().size() == 1)).isTrue();
+        assertThat(rowGroupInfo1.stream().map(RowGroupInfo::prunedBlockMetadata).mapToLong(PrunedBlockMetadata::getRowCount).sum()).isEqualTo(100);
+
+        // Read both columns, half row groups
+        ParquetMetadata parquetMetadata2 = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.of(new DiskRange(0, estimatedDataSize / 2)));
+        List<RowGroupInfo> rowGroupInfo2 = parquetMetadata2.getRowGroupInfo();
+
+        assertThat(rowGroupInfo2.stream().map(RowGroupInfo::prunedBlockMetadata).map(PrunedBlockMetadata::getColumns).allMatch(c -> c.size() == 2)).isTrue();
+        assertThat(rowGroupInfo2.stream().map(RowGroupInfo::prunedBlockMetadata).map(PrunedBlockMetadata::getBlockMetadata).mapToLong(BlockMetadata::rowCount).sum())
+                .isEqualTo(300);
+
+        // Read both columns, all row groups
+        ParquetMetadata parquetMetadata3 = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.empty());
+        List<RowGroupInfo> rowGroupInfo3 = parquetMetadata3.getRowGroupInfo();
+
+        assertThat(rowGroupInfo2.stream().map(RowGroupInfo::prunedBlockMetadata).map(PrunedBlockMetadata::getColumns).allMatch(c -> c.size() == 2)).isTrue();
+        assertThat(rowGroupInfo3.stream().map(RowGroupInfo::prunedBlockMetadata).map(PrunedBlockMetadata::getBlockMetadata).mapToLong(BlockMetadata::rowCount).sum())
+                .isEqualTo(500);
+    }
+
     private void testReadingOldParquetFiles(File file, List<String> columnNames, Type columnType, List<?> expectedValues)
             throws IOException
     {
@@ -193,7 +246,7 @@ public class TestParquetReader
                 file,
                 new ParquetReaderOptions());
         ConnectorSession session = TestingConnectorSession.builder().build();
-        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty());
+        ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty(), Optional.empty());
         try (ParquetReader reader = createParquetReader(dataSource, parquetMetadata, newSimpleAggregatedMemoryContext(), ImmutableList.of(columnType), columnNames)) {
             Page page = reader.nextPage();
             Iterator<?> expected = expectedValues.iterator();
